更新博客信息

--- a/pages/friend.html
+++ b/pages/friend.html
@@ -94,7 +94,7 @@
                  <div class="container">
                 <div class="title">🎉申请友链</div>
                 <div class="content">
-                    <p>在bilibili、Github或QQ联系我即可将你的网站添加进来哦~</p>
+                    <p>在email、Github、QQ或Telegram联系我即可将你的网站添加进来哦~</p>
                 </div>
             </div>       
 
@@ -107,8 +107,8 @@
             <div class="container">
                 <div class="title">🎞️本博客的信息</div>
                 <div class="content">
-                    <p>🏷️站名：Triangle的博客</p>
-                    <p>🌐链接：https://egg-dan.space/</p>
+                    <p>🏷️站名：克喵的博客</p>
+                    <p>🌐链接：https://boke.152531.xyz/</p>
                     <p>🤠头像：<a href="/res/pic/avatar.jpg" target="_blank" id="cua7kb6ahlmelontvbs0" title="点击访问图片链接">访问图片链接</a></p>
              
                 </div>
