--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <h1>
           <a href="/index.html" style="color: #394E6A; text-decoration: none;">
-              WORLD
+              喵落阁
           </a>
       </h1>
       <div id="weather">
