更新关于本站信息

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="container">
                 <div class="title"><i class="fa-solid fa-tasks"></i> 项目</div>
                 <div class="content">
-                    <p>这里有许多有趣的项目。塔罗牌API🔮、简易网盘☁️等等...快来看看吧~</p>
+                    <p>这里有许多有趣的项目。快来看看吧~</p>
                     <a href="/pages/page.php?s=project" class="btn">查看更多</a>
                 </div>
             </div>
